# qr-mvp

./: pyproject.toml
music_app/: admin.py  forms.py  models.py  urls.py  views.py
music_app/templates/: base.html  chat-2.html  chat.html  details.html  product.html  review.html
myplaylist/: settings.py  urls.py  wsgi.py
